# Typefix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  PRODUCT.md  README.md  SECURITY-AUDIT-v2.md  SECURITY-AUDIT-v3-FINAL.md  SECURITY-AUDIT.md  SECURITY-SCAN-HONEST.md  SECURITY-SCAN-v4-HONEST.md  SECURITY-SCAN-v5-CICD.md  SECURITY-SCAN-v6-LEVEL-UP.md  SECURITY.md  STATE-OF-ART-ANALYSIS.md  build.rs  build.rs.fixed  config.json  config.yaml  debug_es_fst.rs  debug_fst.rs  hook_log.txt  justfile
.cargo/: config.toml
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml  security.yml
benches/: benchmarks.rs
data/dictionaries/: en.fst  en.json  en_50k.txt  es.fst  es.json  es_50k.txt  pt.fst  pt.json
data/errors/: en.json  es.json  pt.json
data/stopwords/: en.json  es.json  pt.json
docs/: WEB_INTEGRATION.md  audit-2026-06-19.md  audit-2026-06-20.md  cross-compile.md  deep-research-compact-dictionaries.md  fase-2-estado.md  fase-3-estado.md  fase-4-estado.md  final-review-2026-06-16.md  governance.md  integration-ehr-legal.md  integration-tests.md  issues-acumulados.md  phase1-2-review-final.md  phase3-review-final.md  phase4-review-final.md  plan-implementacion.md  production-readiness-audit-2026-06-19.md  risk-register.md  sec-10-analysis.md  sec-7-analysis.md  sec-8-analysis.md  sec-9-analysis.md
examples/: audit_debug.rs  audit_dict.rs  audit_dict2.rs  audit_user_words.rs  compile_fst.rs  diagnose.rs  diagnose_live.rs  raw_hook.rs  raw_hook_file.rs  raw_hook_hmod.rs  test_damerau.rs  test_dist.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pipeline_fuzz.rs
scripts/: build_en_dict.py  ci-local.ps1  ci-local.sh  generate_mocks.py  generate_sri.ps1  import_hunspell.py  install-hooks.ps1  install-hooks.sh
src/: benchmark.rs  lib.rs  main.rs  memory.rs  pipeline.rs  wasm.rs
src/core/: buffer.rs  config.rs  dict.rs  encoder.rs  mod.rs  trie.rs
src/correction/: damerau.rs  engine.rs  mod.rs  static_map.rs
src/hooks/: linux.rs  macos.rs  mod.rs  platform.rs  windows.rs
src/language/: detector.rs  mod.rs  resolver.rs  stopwords.rs
tests/: boundary_test.rs  concurrency_test.rs  debug_damerau.rs  debug_dict.rs  debug_es_fst.rs  debug_es_fst2.rs  integration.rs.bak  integration_test.rs  stress_test.rs
