[package]
name = "typefix"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["Kiroku Solutions <opensource@kiroku.solutions>"]
description = "Hyper-lightweight, zero-latency typo correction and language detection engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiroku-solutions/typefix"
homepage = "https://github.com/kiroku-solutions/typefix"
documentation = "https://docs.rs/typefix"
readme = "README.md"
keywords = ["typo", "correction", "language-detection", "trie", "damerau-levenshtein"]
categories = ["text-processing", "command-line-utilities"]
publish = true

[lib]
name = "typefix"
path = "src/lib.rs"

[[bin]]
name = "typefix"
path = "src/main.rs"

[[bin]]
name = "stress-runner"
path = "tests/stress_test.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency & synchronization
parking_lot = "0.12"
once_cell = "1.18"

# Unicode handling
unicode-segmentation = "1.10"
unicode-normalization = "0.1"

# System locale detection
sys-locale = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "signal"] }

# Platform-specific dependencies (work for cross-compilation via cfg attributes)
# See .cargo/config.toml for cross-compilation target configuration

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.7", features = ["xkb"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"

# Configuration
config = { version = "0.13", features = ["json"] }

# Testing
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
proptest = "1.2"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
