[package]
name = "typefix-wasm-core"
version = "1.1.8"
edition = "2021"
rust-version = "1.81"
authors = ["Kiroku Solutions <opensource@kiroku.solutions>"]
description = "Hyper-lightweight, zero-latency typo correction and language detection engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiroku-solutions/typefix"
homepage = "https://github.com/kiroku-solutions/typefix"
documentation = "https://docs.rs/typefix"
readme = "README.md"
keywords = ["typo", "correction", "language-detection", "trie", "damerau-levenshtein"]
categories = ["text-processing", "command-line-utilities"]
publish = true
default-run = "typefix"

[lib]
name = "typefix"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "typefix"
path = "src/main.rs"

[[bin]]
name = "stress-runner"
path = "tests/stress_test.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency & synchronization
parking_lot = "0.12"
once_cell = "1.18"


# System locale detection
sys-locale = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }
fst = { version = "0.4.7", features = ["levenshtein"] }
phf = { version = "0.13.1", features = ["macros"] }
lru = "0.16.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0.0"
tray-icon = "0.24.1"
tao = "0.35.3"
memmap2 = "0.9.10"
# Platform-specific dependencies (work for cross-compilation via cfg attributes)
# See .cargo/config.toml for cross-compilation target configuration

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.7", features = ["xkb"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"



# Testing
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"

[profile.daemon]
inherits = "release"
lto = true
panic = "unwind"

[profile.dev]
opt-level = 0

[build-dependencies]
phf_codegen = "0.13.1"
serde_json = "1.0"
fst = "0.4.7"
memmap2 = "0.9.10"
